<resources>
    <string name="app_name">TriviApp</string>
    <string name="welcome">Welcome</string>
    <string name="your_highscore">Your High Score</string>
    <string name="btn_start">Start a new game</string>
    <string name="high_scores">High Scores</string>
    <string name="category_chooser_title">Choose a category</string>
    <string name="category_general_knowledge">General Knowledge</string>
    <string name="category_sports">Sports</string>
    <string name="category_celebrities">Celebrities</string>
    <string name="category_geography">Geography</string>
    <string name="category_books">Books</string>
    <string name="category_film">Film</string>
    <string name="game_over">Game Over</string>
    <string name="your_score">Your Score:</string>
    <string name="play_again">Play Again</string>
    <string name="view_answers">View Answers</string>
    <string name="new_high_score">New High Score !!</string>
    <string name="close_button">Close Button</string>
    <string name="appwidget_text">Your High Score</string>
    <string name="widget_icon">Widget Icon</string>
    <string name="widget_score">Score</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="your_answer">Your Answer</string>

</resources>
