<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/widget_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:contentDescription="@string/widget_icon"
        android:src="@drawable/triviapp_icon" />

    <TextView
        android:id="@+id/appwidget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/widget_icon" />

    <TextView
        android:id="@+id/widget_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="#09C"
        android:contentDescription="@string/widget_score"
        android:text="500"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

</LinearLayout>